--- a/css/style.css
+++ b/css/style.css
@@ -3184,6 +3184,48 @@ ul {
   }
 }
 
+/**************** standardtiles client list css start ****************/
+.rt-container-fluid {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.rt-wpls .slick-dotted.slick-slider {
+  margin-bottom: 30px;
+}
+.rt-wpls .slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+.rt-row {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.clearfix:after, .rt-container:after, .rt-container-fluid:after, .rt-row:after {
+  clear: both;
+}
+.clearfix:before, .clearfix:after, .rt-container:before, .rt-container:after, .rt-container-fluid:before, .rt-container-fluid:after, .rt-row:before, .rt-row:after {
+  content: " ";
+  display: table;
+}
+:after, :before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+/**************** standardtiles client list css end ****************/
+
 /**************** about css start ****************/
 /* line 2, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_about.scss */
 .about_part {
@@ -3903,6 +3945,31 @@ ul {
 .our_latest_work .demo_img img {
   width: 100%;
 }
+
+/**************** old-style-layout css start ****************/
+section.old-style-layout {
+  /* background: pink; */
+} 
+section.old-style-layout .container {
+  min-width: 320px;
+}
+section.old-style-layout .container div.tile {
+  height: 340px;
+  width: 340px;
+  /* border: 1px solid black; */
+  border-radius: 4px;
+  box-sizing: border-box;
+  box-shadow: 3px 3px 5px rgba(0,0,0,0.4);
+  display: inline-block;
+  margin: 5px;
+}
+section.old-style-layout .container div.tile > img {
+  background-size: contain;
+  height: 100%;
+  width: 100%;
+  border-radius: 4px;
+}
+/**************** old-style-layout css end ****************/
 
 /**************** service_part css start ****************/
 /* line 2, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_happy_client.scss */
@@ -5486,7 +5553,7 @@ ul {
 /**************** team_part css start ****************/
 /* line 2, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_team.scss */
 .team_member_section {
-  background-color: #162b45;
+  /* background-color: #162b45; */
 }
 
 @media (max-width: 576px) {
